# klangc

./: .gitignore  Doxyfile  README.md  bootstrap.sh  configure.ac
doc/: spec.md
src/: Makefile.am  bind.c  bind.h  env.c  env.h  expr.c  expr.h  expr_alge.c  expr_alge.h  expr_appl.c  expr_appl.h  expr_cfunc.c  expr_cfunc.h  expr_closure.c  expr_closure.h  expr_env.c  expr_env.h  expr_lambda.c  expr_lambda.h  expr_ref.c  expr_ref.h  hash.c  hash.h  input.c  input.h  inst.c  inst.h  klangc.c  klangc.h  klangc_bare_closure.c  klangc_bare_closure.h  klangc_bind.c  klangc_bind.h  klangc_closure.c  klangc_closure.h  klangc_closure_ent.c  klangc_closure_ent.h  klangc_def.c  klangc_def.h  klangc_dict.c  (+80 more)
src/expr/: appl.c  appl.h  closure.c  closure.h  lambda.c  lambda.h  ref.c  ref.h
src/expr/.deps/: klangc-appl.Po  klangc-closure.Po  klangc-lambda.Po  klangc-ref.Po
src/expr/closure/: bare.c  bare.h  bind.c  bind.h  entry.c  entry.h
src/expr/closure/.deps/: klangc-bare.Po  klangc-bind.Po  klangc-entry.Po
src/pat/: appl.c  appl.h  as.c  as.h  ref.c  ref.h
src/pat/.deps/: klangc-appl.Po  klangc-as.Po  klangc-ref.Po
src/value/: appl.c  appl.h  ref.c  ref.h
src/value/.deps/: klangc-appl.Po  klangc-ref.Po
test/: io.kl  list.kl  state.kl  string.kl  test.kl
