bin_PROGRAMS = klangc

AM_CFLAGS=-O3 -Wall -Werror -I$(top_srcdir)/src

klangc_SOURCES =   \
    bind.h         \
    bind.c         \
    env.h          \
    env.c          \
    expr.h         \
    expr.c         \
    expr_alge.h    \
    expr_alge.c    \
    expr_appl.h    \
    expr_appl.c    \
    expr_cfunc.h   \
    expr_cfunc.c   \
    expr_closure.h \
    expr_closure.c \
    expr_env.h     \
    expr_env.c     \
    expr_lambda.h  \
    expr_lambda.c  \
    expr_ref.h     \
    expr_ref.c     \
    hash.h         \
    hash.c         \
    input.h        \
    input.c        \
    inst.h         \
    inst.c         \
    klangc.h       \
    klangc.c       \
    list.h         \
    list.c         \
    malloc.h       \
    malloc.c       \
    output.h       \
    output.c       \
    parse.h        \
    parse.c        \
    pat.h          \
    pat.c          \
    pat_alge.h     \
    pat_alge.c     \
    pat_as.h       \
    pat_as.c       \
    pat_ref.h      \
    pat_ref.c      \
    program.h      \
    program.c      \
    ref.h          \
    ref.c          \
    ref_target.h   \
    ref_target.c   \
    symbol.h       \
    symbol.c       \
    str.h          \
    str.c          \
    tuple.h        \
    tuple.c        \
    types.h        \
    val.h          \
    val.c          \
    val_alge.h.    \
    val_alge.c     \
    val_appl.h     \
    val_appl.c     \
    val_data.h     \
    val_data.c     \
    val_error.h    \
    val_error.c    \
    val_ioref.h    \
    val_ioref.c    \
    val_ref.h      \
    val_ref.c      

klangc_LDADD = @GC_LIBS@
klangc_CFLAGS = @GC_CFLAGS@
